[tool.poetry]
name = "muliversus"
version = "0.1.0"
description = ""
authors = ["Pierre-Louis Sergent <papa.louis59@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
requests = "^2.28.1"
PyYAML = "^6.0"
itsdangerous = "^2.1.2"
nest-asyncio = "^1.5.5"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
